--- a/app.json
+++ b/app.json
@@ -40,7 +40,12 @@
         "iconPath": "images/首页灰.png",
         "selectedIconPath": "images/首页.png"
       },
-     
+     {
+      "pagePath": "pages/addNote/addNote",
+      "text": "写日记",
+      "iconPath": "images/rizhi2.png",
+      "selectedIconPath": "images/rizhi.png"
+    }, 
       {
         "pagePath": "pages/mine/mine",
         "text": "收藏",
