--- a/app.json
+++ b/app.json
@@ -14,11 +14,10 @@
     "pages/upnick/upnick",
     "pages/upsign/upsign",
     "pages/addNote/addNote",
+    "pages/video/video",
     "pages/contact/contact",
     "pages/detail/detail",
-    "pages/comments/comments"
-    
-   
+    "pages/comments/comments" 
   ],
   "window": {
     "backgroundTextStyle": "light",
@@ -40,7 +39,18 @@
         "iconPath": "images/首页灰.png",
         "selectedIconPath": "images/首页.png"
       },
-      
+      {
+        "pagePath": "pages/addNote/addNote",
+        "text": "写日记",
+        "iconPath": "images/rizhi2.png",
+        "selectedIconPath": "images/rizhi.png"
+      },
+      {
+        "pagePath": "pages/video/video",
+        "text": "发视频",
+        "iconPath": "images/rizhi2.png",
+        "selectedIconPath": "images/rizhi.png"
+      },
       {
         "pagePath": "pages/mine/mine",
         "text": "收藏",
