--- a/app.json
+++ b/app.json
@@ -14,6 +14,7 @@
     "pages/upnick/upnick",
     "pages/upsign/upsign",
     "pages/addNote/addNote",
+    "pages/register/register",
     "pages/video/video",
     "pages/contact/contact",
     "pages/detail/detail",
@@ -44,6 +45,12 @@
         "text": "写日记",
         "iconPath": "images/rizhi2.png",
         "selectedIconPath": "images/rizhi.png"
+      },
+      {
+        "pagePath": "pages/register/register",
+        "text": "签到",
+        "iconPath": "images/add.png",
+        "selectedIconPath": "images/add2.png"
       },
       {
         "pagePath": "pages/video/video",
