--- a/app.json
+++ b/app.json
@@ -16,8 +16,10 @@
     "pages/addNote/addNote",
     "pages/register/register",
     "pages/video/video",
-    "pages/contact/contact",
     "pages/detail/detail",
+    "pages/content/content",
+    "pages/hospital/hospital",
+    "pages/hosdetail/hosdetail",
     "pages/comments/comments" 
   ],
   "window": {
@@ -41,17 +43,11 @@
         "selectedIconPath": "images/首页.png"
       },
       {
-        "pagePath": "pages/addNote/addNote",
-        "text": "写日记",
-        "iconPath": "images/rizhi2.png",
-        "selectedIconPath": "images/rizhi.png"
+        "pagePath": "pages/hospital/hospital",
+        "text": "医院",
+        "iconPath": "images/首页灰.png",
+        "selectedIconPath": "images/首页.png"
       },
-      {
-        "pagePath": "pages/video/video",
-        "text": "发视频",
-        "iconPath": "images/rizhi2.png",
-        "selectedIconPath": "images/rizhi.png"
-      }, 
       {
         "pagePath": "pages/mine/mine",
         "text": "收藏",
