--- a/app.json
+++ b/app.json
@@ -20,6 +20,7 @@
     "pages/content/content",
     "pages/hospital/hospital",
     "pages/hosdetail/hosdetail",
+    "pages/doctor/doctor",
     "pages/comments/comments" 
   ],
   "window": {
@@ -43,10 +44,16 @@
         "selectedIconPath": "images/首页.png"
       },
       {
-        "pagePath": "pages/hospital/hospital",
+        "pagePath": "pages/doctor/doctor",
         "text": "医院",
         "iconPath": "images/首页灰.png",
         "selectedIconPath": "images/首页.png"
+      },
+      {
+        "pagePath": "pages/addNote/addNote",
+        "text": "写日记",
+        "iconPath": "images/rizhi2.png",
+        "selectedIconPath": "images/rizhi.png"
       },
       {
         "pagePath": "pages/mine/mine",
