--- a/app.json
+++ b/app.json
@@ -20,6 +20,7 @@
     "pages/content/content",
     "pages/hospital/hospital",
     "pages/hosdetail/hosdetail",
+    "pages/doctorDetail/doctorDetail",
     "pages/doctor/doctor",
     "pages/comments/comments" 
   ],
@@ -44,14 +45,20 @@
         "selectedIconPath": "images/首页.png"
       },
       {
-        "pagePath": "pages/doctor/doctor",
+        "pagePath": "pages/hospital/hospital",
         "text": "医院",
-        "iconPath": "images/首页灰.png",
-        "selectedIconPath": "images/首页.png"
+        "iconPath": "images/hospital.png",
+        "selectedIconPath": "images/hospital2.png"
       },
       {
         "pagePath": "pages/addNote/addNote",
         "text": "写日记",
+        "iconPath": "images/rizhi2.png",
+        "selectedIconPath": "images/rizhi.png"
+      },
+      {
+        "pagePath": "pages/video/video",
+        "text": "发视频",
         "iconPath": "images/rizhi2.png",
         "selectedIconPath": "images/rizhi.png"
       },
