--- a/app.json
+++ b/app.json
@@ -46,22 +46,11 @@
       },
       {
         "pagePath": "pages/hospital/hospital",
-        "text": "医院",
+        "text": "机构",
         "iconPath": "images/hospital.png",
         "selectedIconPath": "images/hospital2.png"
       },
-      {
-        "pagePath": "pages/addNote/addNote",
-        "text": "写日记",
-        "iconPath": "images/rizhi2.png",
-        "selectedIconPath": "images/rizhi.png"
-      },
-      {
-        "pagePath": "pages/video/video",
-        "text": "发视频",
-        "iconPath": "images/rizhi2.png",
-        "selectedIconPath": "images/rizhi.png"
-      },
+     
       {
         "pagePath": "pages/mine/mine",
         "text": "收藏",
