--- a/app.json
+++ b/app.json
@@ -22,6 +22,7 @@
     "pages/hosdetail/hosdetail",
     "pages/doctorDetail/doctorDetail",
     "pages/doctor/doctor",
+    "pages/chose/chose",
     "pages/comments/comments" 
   ],
   "window": {
@@ -50,7 +51,18 @@
         "iconPath": "images/hospital.png",
         "selectedIconPath": "images/hospital2.png"
       },
-     
+      {
+        "pagePath": "pages/addNote/addNote",
+        "text": "写日记",
+        "iconPath": "images/rizhi2.png",
+        "selectedIconPath": "images/rizhi.png"
+      },
+      {
+        "pagePath": "pages/chose/chose",
+        "text": "选择",
+        "iconPath": "images/rizhi2.png",
+        "selectedIconPath": "images/rizhi.png"
+      },
       {
         "pagePath": "pages/mine/mine",
         "text": "收藏",
