--- a/app.json
+++ b/app.json
@@ -24,7 +24,13 @@
     "pages/doctor/doctor",
     "pages/chose/chose",
     "pages/uprealname/uprealname",
-    "pages/comments/comments" 
+    "pages/comments/comments",
+    "pages/component/component",
+    "pages/counselor/counselor",
+    "pages/Counselors/Counselors",
+    "pages/CounselorOne/CounselorOne",
+    "component/header/header",
+    "pages/test/test"
   ],
   "window": {
     "backgroundTextStyle": "light",
@@ -52,8 +58,18 @@
         "iconPath": "images/hospital.png",
         "selectedIconPath": "images/hospital2.png"
       },
-    
-      
+      {
+        "pagePath": "pages/addNote/addNote",
+        "text": "写日记",
+        "iconPath": "images/rizhi2.png",
+        "selectedIconPath": "images/rizhi.png"
+      },
+      {
+        "pagePath": "pages/counselor/counselor",
+        "text": "咨询",
+        "iconPath": "images/hospital.png",
+        "selectedIconPath": "images/hospital2.png"
+      },
       {
         "pagePath": "pages/mine/mine",
         "text": "收藏",
