--- a/app.json
+++ b/app.json
@@ -58,20 +58,20 @@
         "iconPath": "images/hospital.png",
         "selectedIconPath": "images/hospital2.png"
       },
-      {
-        "pagePath": "pages/addNote/addNote",
-        "text": "写日记",
-        "iconPath": "images/rizhi2.png",
-        "selectedIconPath": "images/rizhi.png"
-      },
+     {
+      "pagePath": "pages/addNote/addNote",
+      "text": "写日记",
+      "iconPath": "images/rizhi2.png",
+      "selectedIconPath": "images/rizhi.png"
+    },
       {
         "pagePath": "pages/counselor/counselor",
         "text": "咨询",
-        "iconPath": "images/hospital.png",
-        "selectedIconPath": "images/hospital2.png"
+        "iconPath": "images/cons1.png",
+        "selectedIconPath": "images/cons2.png"
       },
       {
-        "pagePath": "pages/test/test",
+        "pagePath": "pages/mine/mine",
         "text": "收藏",
         "iconPath": "images/shoucang21.png",
         "selectedIconPath": "images/shoucang22.png"
